# oricred-procurement-leads-dash

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: alembic.ini  oricred.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260715_streamline.py  20260720_nullable_contact_email.py
backend/app/: config.py  database.py  main.py  seed.py  utils.py  workflow.py
backend/app/api/: __init__.py  admin.py  auth.py  awards.py  categories.py  contacts.py  dashboard.py  historical_contacts.py  leads.py  opportunities.py  organizations.py  past_due.py  radar.py  stats.py  tenders.py  watchlist.py
backend/app/clients/: __init__.py  awards.py  base.py  companies.py  forensic.py  organizations.py  reference.py  tenders.py  tsa_db.py
backend/app/jobs/: __init__.py  award_check.py  category_backfill.py  contact_enrichment.py  crm_sync.py  discovery.py  historical_backfill.py  historical_contacts.py  model_refresh.py  scheduler.py  tender_backfill.py
backend/app/models/: __init__.py  alert_log.py  award.py  award_ingestion_state.py  buyer_relationship.py  category.py  company.py  contact.py  failed_api_call.py  filter_config.py  historical_contact.py  historical_ingestion_state.py  job_run.py  opportunity.py  organization.py  past_due.py  tender.py  timing_model.py  (+2 more)
backend/scripts/: fix_bad_dates.py
backend/tests/: test_award_check.py  test_buyer_relationship.py  test_competitor_intel.py  test_contacts.py  test_crm_adapter.py  test_funding_suitability.py  test_lead_contact_import.py  test_p2b_api.py  test_tsa_db.py
(+89 files in other folders)
